--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
         "preserveConstEnums": true,
         "sourceMap": true,
         "jsx": "react",
+        "lib": ["es2015", "dom"],
         "typeRoots": [
             "node_modules/@types"
         ],
